--- a/public/locales/en/widgets.json
+++ b/public/locales/en/widgets.json
@@ -12,5 +12,7 @@
   "sticker-card-subtitle-last-30-days": "Monthly (Last 30 Days)",
   "sticker-card-subtitle-last-365-days": "Yearly (Last 365 Days)",
   "sticker-card-title-total-shops": "Total Shops",
-  "sticker-card-title-today-refunds": "Todays Refunds"
+  "sticker-card-title-today-refunds": "Todays Refunds",
+  "sticker-card-title-course": "Total Course",
+  "sticker-card-title-student": "Total Student"
 }
