fix: CoursePayments page data

--- a/public/locales/en/form.json
+++ b/public/locales/en/form.json
@@ -198,6 +198,7 @@
   "student-form-info-help-text": "Add your student information and create a new subject from here",
   "customer-form-info-help-text": "Add your customer information and create a new customer from here",
   "course-form-info-help-text": "Add your course information and create a new course from here",
+  "admission-form-info-help-text": "Pay student admission fee here",
   "coupon-image-helper-text": "Upload your coupon image here",
   "coupon-form-info-help-text": "your coupon description and necessary information from here",
   "shipping-form-info-help-text": "your shipping description and necessary information from here",
