feat: NofiyLog seen/all-seen

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -391,6 +391,7 @@
   "text-visit-store": "Visit Store",
   "text-created-new-order": "Created a new order",
   "text-sent-new-store-notice": "created a new store notice.",
+  "text-sent-new-course-notice": "created a new course notice.",
   "text-sent-new-message": "sent a new message.",
   "text-export-orders": "Export Orders",
   "text-non-translated-title": "Create",
